# ssd

./: .coverage  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  conftest.py  db.sqlite3  findings.md  manage.py  progress.md  pyproject.toml  start-claude.sh  tailwind.config.js  task_plan.md  verify_workflows.py
.claude/: settings.json
.playwright-mcp/: .gitignore
docs/: language-switcher.md  translation-guide.md
docs/.claude/: ralph-loop.local.md
docs/architecture/: data-model-reference.md  model-relationships.mmd  p0-p1-p2-models.md
docs/operational/: requirements-coverage.md
docs/plans/: 2025-01-22-submission-architecture-redesign.md  2026-01-22-notification-triggers.md
fixtures/: demo.json
scripts/: check_translations.sh
spec/: behavior_requirements.csv  hackathon-prd.md  refactor-for-hackathon.md  simplified-implementation.md
spec/future/: git-integrate.md
spec/refactor/: README.md  overview.md  section-01.md  section-02.md  section-03.md  section-04.md  section-05.md  section-06.md  section-07.md  section-08.md  section-09.md  section-10.md  section-11.md  section-12.md
static_compiled/css/: main.css
static_compiled/js/: main.js
static_src/sass/: main.scss
synnovator/: api.py  urls.py  wsgi.py
synnovator/assets/: apps.py  models.py
synnovator/community/: apps.py  models.py  urls.py  views.py
synnovator/forms/: apps.py  models.py
synnovator/hackathons/: __init__.py  apps.py  urls.py  views.py
synnovator/home/: apps.py  models.py
synnovator/images/: apps.py
synnovator/navigation/: apps.py  models.py
synnovator/news/: apps.py  models.py  models_fixed.py  serializers.py
synnovator/notifications/: apps.py  models.py  services.py  signals.py  urls.py  views.py
synnovator/settings/: base.py  dev.py
synnovator/standardpages/: apps.py  models.py
synnovator/tests/: test_template_layout.py
synnovator/users/: apps.py  models.py  urls.py  views.py
synnovator/utils/: apps.py  blocks.py  models.py  struct_values.py  urls.py  views.py
templates/: base.html  base_page.html
templates/community/: create_team.html  join_team.html  leave_team.html  team_detail.html  team_index_page.html  team_list.html  team_profile_page.html
(+124 files in other folders)
